<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:checkableBehavior="single">
    <item
        android:title="@string/Sports"
        android:id="@+id/sop"
        android:orderInCategory="200"
        android:icon="@drawable/ic_baseline_sports_soccer_24"/>
    <item
        android:orderInCategory="400"
        android:id="@+id/science"
        android:title="@string/Science"
        android:icon="@drawable/ic_baseline_public_24"/>
    <item
        android:orderInCategory="300"
        android:id="@+id/Health"
        android:title="@string/Health"
        android:icon="@drawable/ic_baseline_local_hospital_24"/>
    <item
        android:orderInCategory="100"
        android:id="@+id/Technology"

        android:title="@string/Technology"
        android:icon="@drawable/ic_baseline_phone_iphone_24"/>
</group>

    <item
        android:id="@+id/masr"
        android:title="@string/Masry_ELYoum"
        android:orderInCategory="600"
        android:icon="@drawable/ic_baseline_picture_in_picture_24"/>
    <item
        android:orderInCategory="500"
        android:id="@+id/youm"
        android:title="@string/Youm7"
        android:icon="@drawable/ic_baseline_picture_in_picture_24"/>
    <item
        android:orderInCategory="700"
        android:id="@+id/figo"
        android:title="@string/FilGoal"
        android:icon="@drawable/ic_baseline_picture_in_picture_24"/>

<group>
    <item
        android:orderInCategory="900"
        android:title="Data From:https://newsapi.org" />

</group>
</menu>